# BigSpace-obsolete

./: BigSpace.cabal  README.md  README.md~
CurvedSpace/: .gitignore  .project  CurvedSpace.cabal  build.sh  build.sh~  run-tests.sh  run.sh
CurvedSpace/CurvedSpace/: CurvedSpace.hs
CurvedSpace/CurvedSpace/Common/: Constants.hs  InteropTypes.hs  TickTime.hs  Types.hs  World.hs  WorldServer.hs
CurvedSpace/CurvedSpace/Draw/: Draw.hs
CurvedSpace/CurvedSpace/Game/: Boot.hs  Common.hs  Draw.hs  Environment.hs  Input.hs  MainLoop.hs  Output.hs  Wire.hs  Wires.hs  World.hs
CurvedSpace/CurvedSpace/Game/Input/: Input.hs  InputBuffer.hs  Keys.hs
CurvedSpace/CurvedSpace/Game/Menu/: Menu.hs
CurvedSpace/CurvedSpace/Game/Workflow/: GameCycle.hs
CurvedSpace/CurvedSpace/SDL/: Common.hs  Events.hs  Helpers.hs  Keys.hs
CurvedSpace/CurvedSpace/Test/: World.hs
CurvedSpace/CurvedSpace/Trash/: Constants.hs  CurvedSpaceTrash.hs  GLTypes.hs  InteropTypes.hs  Types.hs  World.hs
CurvedSpace/CurvedSpace/Trash/Crib/: Curses.hs  MainWorkflow2.hs  MainWorkflow3.hs  MainWorkflow4Success.hs  MenuWire.hs  MonadNamed.hs
CurvedSpace/CurvedSpace/Trash/Test/: WorldTest.hs
CurvedSpace/CurvedSpace/Utils/: Colors.hs  Constants.hs  Logger.hs  SDLKeys.hs
CurvedSpace/CurvedSpace/Utils/Logging/: Formatter.hs  Logger.hs  Logger2.hs
CurvedSpace/CurvedSpace/Utils/Time/: Time.hs
CurvedSpace/CurvedSpace/Wire/: Wire.hs
CurvedSpace/CurvedSpace/Workflow/: Logger.hs  MainWorkflow.hs  WireWF.hs  Workflow.hs  WorkflowFacade.hs
Docs/: BigSpace Design Document.odt
Docs/UsefulMaterials/: Sword of the Stars 2: The Lords of Winter — Википедия.mht  «Детский» геймдев или «Как я играл в инди-разработчика» _ Хабрахабр.mht  Время — Википедия.mht  Принцип причинности — Википедия.mht  Проектирование игр функциональный подход Кирилл Лебедев.ppt  Путешествия во времени и программирование _ Хабрахабр.mht  Расширение Вселенной — Википедия.mht  Сверхсветовое движение — Википедия.mht  Специальная теория относительности — Википедия.mht
Prototypes/CurvedSpace/: .project  CurvedSpace.cabal  build.sh
Prototypes/CurvedSpace/src/: Main.hs
Prototypes/CurvedSpace/src/Common/: Constants.hs  GL.hs  GLTypes.hs  InteropTypes.hs  Units.hs
Prototypes/CurvedSpace/src/Draw/: Draw.hs
src/: Main.hs  Test1.hs  Types.hs  dbg
src/Geometry/: GeometryTypes.hs
src/Object/: ObjectTypes.hs
