name:           CurvedSpace
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Alexander Granin

library
  build-depends:   
                   base >= 4,
                   vector,
                   OpenGL,
                   bytestring,
                   array,
                   binary,
                   GLUT,
                   haskell-src,
                   network,
                   GLURaw,
                   OpenGLRaw,
                   old-time,
                   QuickCheck,
                   mtl,
                   old-locale,
                   containers,
                   transformers,
                   BigSpaceLibrary
  ghc-options:     -O1
  other-modules:   
                   Game.Boot,
                   Utils.Logger,
                   Trash.Crib.Curses,
                   Game.Environment,
                   SDL.Keys,
                   SDL.Helpers,
                   Utils.Constants,
                   Trash.Crib.MenuWire,
                   Game.Input,
                   Game.World,
                   Game.Draw,
                   Game.Wire,
                   Game.Output,
                   Game.Menu.Menu
  hs-source-dirs:  CurvedSpace

executable CurvedSpace
  hs-source-dirs:  CurvedSpace
  main-is:         CurvedSpace.hs
  build-depends:   base >= 4
  ghc-options:     -O1 -threaded -outputdir ./bin -o ./bin/CurvedSpace ./CurvedSpace/CurvedSpace.hs
  other-modules:   
                   Game.Boot,
                   Utils.Logger,
                   Trash.Crib.Curses,
                   Game.Environment,
                   SDL.Keys,
                   SDL.Helpers,
                   Utils.Constants,
                   Trash.Crib.MenuWire,
                   Game.Input,
                   Game.World,
                   Game.Draw,
                   Game.Wire,
                   Game.Output,
                   Game.Menu.Menu

